--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "portfolio_amk",
   "version": "0.1.0",
+  "homepage": "https://tansuz.github.io/oikari1.portfolio",
   "private": true,
   "dependencies": {
     "@nextui-org/react": "^2.4.6",
@@ -19,6 +20,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predebloy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
